# kira

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml
.agents/skills/rust-strict/: SKILL.md
.agents/skills/rust-strict/agents/: openai.yaml
.agents/skills/rust-strict/references/: api-design.md  cli-systems.md  docs.md  drift-control.md  errors.md  lints.md  testing.md  workflow.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/mux/: Cargo.toml
apps/mux/src/: error.rs  inspector.rs  interaction.rs  lib.rs  logging.rs  main.rs  output.rs  paths.rs  util.rs
apps/mux/src/agent_io/: capture.rs  mod.rs  policy.rs  resolve.rs  send.rs  wait.rs
apps/mux/src/agent_io/wait/: tests.rs
apps/mux/src/app/: agent_cmds.rs  mod.rs  workspace_cmds.rs
apps/mux/src/cli/: mod.rs  workspace.rs
apps/mux/src/config/: error.rs  fingerprint.rs  load.rs  mod.rs  model.rs  resolve.rs
apps/mux/src/config/load/: target.rs
apps/mux/src/inspector/: snapshot_tests.rs
apps/mux/src/model/: mod.rs  project.rs  status.rs
apps/mux/src/prompt/: context.rs  mod.rs  orchestrator.rs  render.rs
apps/mux/src/test_support/: mod.rs
apps/mux/src/tmux/: adapter.rs  client.rs  env_file.rs  error.rs  metadata.rs  mod.rs  parse.rs  paste.rs
apps/mux/src/workspace/: identity.rs  launch.rs  lifecycle.rs  mod.rs  status.rs
apps/mux/tests/: cli.rs
examples/solo-coder/: README.md  project.toml
