[package]
name = "kira-mux"
version = "0.1.0"
description = "tmux multi-agent workspaces"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[[bin]]
name = "kira-mux"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
